# llm-eval-bug-triage

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
docs/: human_labels_GUIDE.md  insights_memo.md
notebooks/: analysis.ipynb  development.ipynb
scripts/: download_bugzilla.py  main.py  mcp_server.py
