[project]
name = "project2-nlp-eval"
version = "0.1.0"
description = "NLP evaluation pipeline - consumer complaint classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
    "langgraph>=0.2",
    "mcp>=1.2",
    "ipykernel>=6.29",
    "langchain-openai>=0.3",
]
